Moved files to use ws/lcu scheme. Copied from ARCHIVE/TMCDB/MonitorCollector, tag mon-refactor-201101 to monitoring/moncollect
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@146774 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/monitoring/moncollect/ws/src/Makefile
+++ b/LGPL/CommonSoftware/monitoring/moncollect/ws/src/Makefile
@@ -1,13 +1,13 @@
 #*******************************************************************************
-# E.S.O. - ACS project
+# PPPPPPPP
 #
-# "@(#) $Id: Makefile,v 1.1 2011/01/19 14:38:01 tstaig Exp $"
+# "@(#) $Id: Makefile,v 1.1 2011/01/19 21:20:41 tstaig Exp $"
 #
 # Makefile of ........
 #
 # who       when      what
 # --------  --------  ----------------------------------------------
-# ramestic  2004-05-25  created
+# bjeram  11/02/09  created
 #
 
 #*******************************************************************************
@@ -20,8 +20,6 @@
 #
 # user definable C-compilation flags
 #USER_CFLAGS = 
-#USER_RTAI_CFLAGS = 
-
 
 #
 # additional include and library search paths
@@ -35,14 +33,6 @@
 #                     local (_L) are not "installed".
 
 #
-# RTAI modules
-#
-#RTAI_MODULES    = 
-
-#
-# <brief description of xxxxx rtai module>
-
-#
 # C programs (public and local)
 # -----------------------------
 EXECUTABLES     =
@@ -50,8 +40,9 @@ EXECUTABLES_L   =
 
 #
 # <brief description of xxxxx program>
-
-
+xxxxx_OBJECTS   =	
+xxxxx_LDFLAGS   =
+xxxxx_LIBS      =
 
 #
 # special compilation flags for single c sources
@@ -60,30 +51,24 @@ EXECUTABLES_L   =
 #
 # Includes (.h) files (public only)
 # ---------------------------------
-INCLUDES        =
+INCLUDES        = MonitorCollectorImpl.h MonitorComponent.h MonitorPoint.h MonitorPoint.i
 
 #
 # Libraries (public and local)
 # ----------------------------
-LIBRARIES       =
-LIBRARIES_L     = MCtestComponent MCmockBlobber MCmockController
+LIBRARIES       = MonitorCollector
+LIBRARIES_L     =
 
 #
 # <brief description of lllll library>
-MCtestComponent_OBJECTS = MCtestComponentImpl
-MCtestComponent_LIBS= MCtestComponentStubs baci
-
-MCmockBlobber_OBJECTS = MCmockBlobberImpl
-MCmockBlobber_LIBS = baci MonitorArchiverIFStubs CollectorListStatusStubs acscomponent 
-
-MCmockController_OBJECTS = MCmockControllerImpl
-MCmockController_LIBS = baci MonitorArchiverIFStubs CollectorListStatusStubs acscomponent
+MonitorCollector_OBJECTS   = MonitorCollectorImpl MonitorComponent MonitorPoint
+MonitorCollector_LIBS = baci TMCDBCOMMON_IDLStubs MonitorCollectorStubs MonitorArchiverIFStubs MonitorCollectorErr CollectorListStatusStubs acscommonStubs enumpropMACROStubs TAO_DynamicInterface
 
 #
 # Scripts (public and local)
 # ----------------------------
 SCRIPTS         =
-SCRIPTS_L       = MCTestPrologue
+SCRIPTS_L       =
 
 #
 # TCL scripts (public and local)
@@ -95,8 +80,8 @@ TCL_SCRIPTS_L   =
 # Python stuff (public and local)
 # ----------------------------
 PY_SCRIPTS         =
-PY_SCRIPTS_L       = mcTestRegisterDevice mcTestRegisterDeviceWithMultipleSerial  mcTestDeviceWithSeqAndMultipleSerial \
-						mcTestComponent
+PY_SCRIPTS_L       =
+
 PY_MODULES         =
 PY_MODULES_L       =
 
@@ -129,8 +114,11 @@ CDB_SCHEMAS =
 # IDL Files and flags
 # 
 IDL_FILES = 
-IDL_TAO_FLAGS =
+TAO_IDLFLAGS =
 USER_IDL =
+
+
+ACSERRDEF = 
 #
 # Jarfiles and their directories
 #
@@ -139,7 +127,7 @@ jjj_DIRS=
 jjj_EXTRAS= 
 #
 # java sources in Jarfile on/off
-DEBUG= 
+DEBUG= on 
 #
 # ACS XmlIdl generation on/off
 #
@@ -194,13 +182,12 @@ CSOURCENAMES = \
 #
 # INCLUDE STANDARDS
 # -----------------
+
 MAKEDIRTMP := $(shell searchFile include/acsMakefile)
 ifneq ($(MAKEDIRTMP),\#error\#)
    MAKEDIR := $(MAKEDIRTMP)/include
    include $(MAKEDIR)/acsMakefile
-endif 
-
-
+endif
 
 #
 # TARGETS
@@ -208,8 +195,7 @@ endif
 all:	do_all
 	@echo " . . . 'all' done" 
 
-clean : clean_all
-	rm -rf tmp 
+clean : clean_all 
 	@echo " . . . clean done"
 
 clean_dist : clean_all clean_dist_all 
@@ -220,5 +206,6 @@ man   : do_man
 
 install : install_all
 	@echo " . . . installation done"
+
 
 #___oOo___
