Aligned project name with other monitoring modules, with "ACS_" prefix.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@146844 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/monitoring/moncontroller/.project
+++ b/LGPL/CommonSoftware/monitoring/moncontroller/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>moncontroller</name>
+	<name>ACS_moncontroller</name>
 	<comment></comment>
 	<projects>
 	</projects>
