--- a/LGPL/CommonSoftware/ACSLaser/laser-core/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/laser-core/.classpath
@@ -39,5 +39,11 @@
 	<classpathentry kind="var" path="ACSROOT/lib/laserclient.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/laserconsole.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/laserguiplatform.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/lcEngine.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/maciSchemaBindings.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/avalon-framework.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/logkit.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/endorsed/xercesImpl.jar"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
