--- a/LGPL/CommonSoftware/ACSLaser/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="acs-jms/src"/>
+	<classpathentry kind="src" path="alarmTests/test"/>
 	<classpathentry kind="src" path="alarmPanel/test"/>
 	<classpathentry kind="src" path="baciPropsTest/src"/>
 	<classpathentry kind="src" path="baciPropsTest/test"/>
