--- a/LGPL/CommonSoftware/ACSLaser/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="src" path="alarm-clients/test"/>
 	<classpathentry kind="src" path="alarmPanel/src"/>
 	<classpathentry kind="src" path="alarmPanel/test"/>
+	<classpathentry kind="src" path="alarmSourcePanel/src"/>
 	<classpathentry kind="src" path="alarmTests/test"/>
 	<classpathentry kind="src" path="baciPropsTest/src"/>
 	<classpathentry kind="src" path="baciPropsTest/test"/>
