dir to be deleted misspelt
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@148081 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/gui/jchart2d/test/Makefile
+++ b/LGPL/Tools/gui/jchart2d/test/Makefile
@@ -61,7 +61,7 @@ all:	unpack do_all
 
 clean : clean_all
 	@rm -rf unpacked
-	@rm -rf .purify
+	@rm -rf .purifydir
 	@rm -rf $(JCHART2D_JAR) 
 	@rm -rf info
 	@echo " . . . clean done"
