Added the scripts for testing RR with default FM and regular expressions
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@148226 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/laser-core/test/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/laser-core/test/Makefile
@@ -67,13 +67,15 @@ lllll_OBJECTS   =
 # Scripts (public and local)
 # ----------------------------
 # jagonzal: These are shell scripts not Python scripts
-SCRIPTS         = lasercoreTATPrologue \
-                                        testCategoryDAO \
-                                        testAlarmSender \
-                                        testAlarmService \
-                                        testAlarmDAO \
-                                        testCDBCoreAlarm \
-                                        testIDLSendAlarm
+SCRIPTS     = lasercoreTATPrologue \
+            testCategoryDAO \
+            testAlarmSender \
+            testAlarmService \
+            testAlarmDAO \
+            testCDBCoreAlarm \
+            testIDLSendAlarm \
+			testRRWithDefaultFM \
+			testRRWithRegExp
 
 SCRIPTS_L       =
 
