--- a/LGPL/CommonSoftware/monitoring/monblobber/.classpath
+++ b/LGPL/CommonSoftware/monitoring/monblobber/.classpath
@@ -3,19 +3,23 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscomponent.jar"/>
-	<classpathentry kind="var" path="INTROOT/lib/MonitorArchiverIF.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/MonitorArchiverIF.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jcont.jar"/>
-	<classpathentry kind="var" path="INTROOT/lib/CollectorListStatus.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/CollectorListStatus.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsjlog.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/JavaContainerError.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/maciErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsASsources.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsErrTypeAlarmSourceFactory.jar"/>
-	<classpathentry kind="var" path="INTROOT/lib/MonitoringDAO_IF.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/MonitoringDAO_IF.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/castor.jar"/>
-	<classpathentry kind="var" path="INTROOT/lib/MonitorCollector.jar"/>
-	<classpathentry kind="var" path="INTROOT/lib/TMCDBCOMMON_IDL.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/MonitorCollector.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/TMCDBCOMMON_IDL.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acserrj.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/jACSUtil.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCommon.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acserr.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
