*** empty log message ***
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@148402 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/monitoring/monicd/.classpath
+++ b/LGPL/CommonSoftware/monitoring/monicd/.classpath
@@ -9,5 +9,7 @@
 	<classpathentry kind="lib" path="ws/lib/TMCDBCOMMON_IDL.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="ws/lib/MonitoringDAO_IF.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCommon.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acserrj.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
