Added dependency between jcontexmplComp.jar and LampCallback.jar
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@149529 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jcontexmpl/src/Makefile
+++ b/LGPL/CommonSoftware/jcontexmpl/src/Makefile
@@ -76,7 +76,7 @@ jcontexmplComp_DIRS = \
 	alma/demo/XmlComponentImpl \
 	alma/demo/XmlOffShootImpl \
 	alma/acsexmplErrorComponent
-jcontexmplComp_JLIBS = LampAccess EventComponent ErrorSystemComponent
+jcontexmplComp_JLIBS = LampAccess EventComponent ErrorSystemComponent LampCallback
 
 
 JARFILES = jcontexmplClient
