Added dependency between alarmsysteminterface.jar and AlarmSourceSchemaBindings.jar
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@149548 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/laser-source/src/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/laser-source/src/Makefile
@@ -121,6 +121,7 @@ USER_IDL =
 JARFILES= alarmsysteminterface
 alarmsysteminterface_DIRS= cern alma
 alarmsysteminterface_EXTRAS= cern/laser/source/alarmsysteminterface/impl/asi-configuration.xml
+alarmsysteminterface_JLIBS = AlarmSourceSchemaBindings
 #
 # java sources in Jarfile on/off
 DEBUG= on
