Added dependency between lasercore.jar and AlarmSystem.jar
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@149550 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/laser-core/src/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/laser-core/src/Makefile
@@ -1,7 +1,7 @@
 #*******************************************************************************
 # PPPPPPPP
 #
-# "@(#) $Id: Makefile,v 1.23 2009/06/20 18:34:50 acaproni Exp $"
+# "@(#) $Id: Makefile,v 1.24 2011/03/10 15:38:36 jagonzal Exp $"
 #
 # Makefile of ........
 #
@@ -129,6 +129,7 @@ USER_IDL =
 #
 JARFILES= lasercore
 lasercore_DIRS=alma cern com
+lasercore_JLIBS = AlarmSystem
 jjj_EXTRAS= 
 #
 # java sources in Jarfile on/off
