Added dependency between asdemo.jar and demoComponents.jar
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@149557 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/demo/src/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/demo/src/Makefile
@@ -120,6 +120,7 @@ USER_IDL =
 #
 JARFILES= asdemo
 asdemo_DIRS=alma
+asdemo_JLIBS = demoComponents
 jjj_EXTRAS= 
 #
 # java sources in Jarfile on/off
